# opauque-stellar

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Cargo.toml  DISCLAIMER.md  ISSUER_ENCODING.md  ISSUER_ENCODING_QUICK_REFERENCE.md  README.md  RELEASE_NOTES.md  STEALTH_KEY_ALIGNMENT.md  STELLAR_INDEXER.md  TRAIT_DATA_HASHING.md  package.json
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  release.yml
PRs/: add-governance-pause-attestation-engine-v2.md
artifacts/: README.md  manifest.json  public-verify-key.pem
circuits/: package.json
circuits/fixtures/v1/: expected-public.json  invalid-input.json  valid-input.json
circuits/fixtures/v2/: expected-public.json  invalid-input.json  valid-input.json
circuits/scripts/: generate-fixtures.mjs
circuits/test/: regression.mjs
circuits/v2/: package.json  stealth_reputation.circom
contracts/: Cargo.toml
contracts/attestation-engine-v2/: Cargo.toml
contracts/attestation-engine-v2/src/: lib.rs
contracts/groth16-verifier/src/: lib.rs
contracts/opaque-schema-core/: Cargo.toml
contracts/opaque-schema-core/src/: lib.rs
contracts/reputation-verifier/src/: lib.rs
contracts/schema-registry/: Cargo.toml
contracts/schema-registry/src/: lib.rs
contracts/stealth-announcer/src/: lib.rs
contracts/stealth-registry/src/: lib.rs
deployments/: README.md  manifest.schema.json
deployments/v1/: mainnet.json  testnet.json
docs/: EVENT_VERSIONING.md  GHOST_THREAT_MODEL.md  canonical-schema-encoding.md  crypto-test-vectors.json  schema-id-vectors.md
frontend/: .gitignore  eslint.config.js  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  polyfills.ts  wasm.d.ts
frontend/src/__tests__/: keyRotation.test.ts  (+3 more)
scanner/: Cargo.toml
scanner/benches/: scanner_perf.rs
scanner/src/: attestation.rs  lib.rs  merkle.rs
scripts/: artifact-manifest-lib.mjs  build-scanner-wasm.mjs  build-scanner-wasm.ts  check-wasm-sizes.ts  ci-local.sh  fetch-circuit-artifacts.mjs  fetch-circuit-artifacts.ts  prepare-frontend-artifacts.mjs  prepare-frontend-artifacts.ts  sign-release-artifacts.ts  update-artifact-manifest.mjs  update-artifact-manifest.ts  verify-artifact-manifest.mjs  verify-artifact-signatures.ts
(+97 files in other folders)
