[workspace]
resolver = "2"
members = [
    "stealth-registry",
    "stealth-announcer",
    "groth16-verifier",
    "reputation-verifier",
    "opaque-schema-core",
    "schema-registry",
    "attestation-engine-v2",
]

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
