[package]
name = "cryptography"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]

[dependencies]
k256 = { version = "0.13", features = ["ecdh", "arithmetic"] }
sha3 = "0.10"
sha2 = "0.10"
alloy-primitives = "1.5"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
hex = "0.4"
num-bigint = "0.4"
poseidon-bn128 = "0.1.1"
scalarff = { version = "0.4", features = ["alt_bn128"] }
log = "0.4"
env_logger = "0.10"
[dev-dependencies]
criterion = "0.5"
rand = "0.8"
